[project]
name = "task-tracker-cli"
version = "0.1.0"
description = "A simple CLI task manager built with Python"
authors = [
    { name="Preethi Angelin" }
]
dependencies = [
    "rich>=14.0.0"
]

[project.scripts]
task-cli = "task_tracker.cli:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"